Update comment, list-comments, popup-user-information, popup-like-product, popup-view-all-product...

--- a/src/SCSS/_variables.scss
+++ b/src/SCSS/_variables.scss
@@ -118,3 +118,14 @@ $blue-brand-700-brand: #0071BB;
 $background-brand-2: linear-gradient(135deg, #FFA233 15.44%, #0071BB 84.01%);
 
 $blue-1: #79CDCD;
+
+//Ngọc Lam
+$turquoise-100: #B2EBF2;
+$turquoise-200: #80DEEA;
+$turquoise-300: #4DD0E1;
+$turquoise-400: #26C6DA;
+$turquoise-500: #00BCD4;
+$turquoise-600: #00ACC1;
+$turquoise-700: #0097A7;
+$turquoise-800: #00838F;
+$turquoise-900: #006064;
