--- a/src/app/Dynamic/box-popup-dynamic/box-popup-dynamic.component.html
+++ b/src/app/Dynamic/box-popup-dynamic/box-popup-dynamic.component.html
@@ -1,3 +1,4 @@
-<ng-container #popup_system_information_component></ng-container>
 <ng-container #popup_add_product_cart></ng-container>
 <ng-container #popup_product_system_information></ng-container>
+<ng-container #popup_like></ng-container>
+<ng-container #popup_user_information></ng-container>
