--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-box-popup-dynamic></app-box-popup-dynamic>
+<app-box-popup-dynamic class="dynamic"></app-box-popup-dynamic>
 <div class="layout">
-  <app-home-page></app-home-page>
+  <app-home-page class="home"></app-home-page>
 </div>
