--- a/src/SCSS/_mixins2.scss
+++ b/src/SCSS/_mixins2.scss
@@ -287,7 +287,7 @@
 }
 
 @mixin text-14-medium {
-  font-size: 1.4rem;
+  font-size: 14px;
   font-weight: medium;
   line-height: auto;
   letter-spacing: 0.1px;
@@ -295,7 +295,7 @@
 }
 
 @mixin text-14-bold {
-  font-size: 1.4rem;
+  font-size: 14px;
   font-weight: 700;
   line-height: auto;
   letter-spacing: 0.25px;
@@ -303,7 +303,7 @@
 }
 
 @mixin text-14-regular {
-  font-size: 1.4rem;
+  font-size: 14px;
   letter-spacing: 0.25px;
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
@@ -311,7 +311,7 @@
 }
 
 @mixin text-16-bold {
-  font-size: 1.6rem;
+  font-size: 16px;
   letter-spacing: 0.25px;
   font-family: 'Roboto', sans-serif;
   font-weight: 700;
@@ -363,7 +363,7 @@
 }
 
 @mixin text-20-bold {
-  font-size: 2rem;
+  font-size: 20px;
   letter-spacing: 0.15px;
   line-height: auto;
   font-weight: bold;
