--- a/src/app/Home/body-home-page/body-home-page.component.scss
+++ b/src/app/Home/body-home-page/body-home-page.component.scss
@@ -1,3 +1,18 @@
+@media only screen and (min-width: 1000px) {
+    .body-container{     
+        &>.container{
+            &>.banner{
+
+            }
+            &>.brand{
+
+            }
+            &>.list-product {
+                
+            }
+        }
+    }
+}
 @media only screen and (max-width: 600px) {
     .body-container{
         &>.container{
