--- a/src/app/Home/dropdown/dropdown.component.scss
+++ b/src/app/Home/dropdown/dropdown.component.scss
@@ -19,6 +19,7 @@
             border: 1px solid #E8E8E8;
 
             width: 5rem;
+            height: 2rem;
 
             &>svg{
                 height: 2rem;
