--- a/src/app/Home/home-page/home-page.component.html
+++ b/src/app/Home/home-page/home-page.component.html
@@ -4,10 +4,13 @@
             <app-navbar></app-navbar>
         </div>
         <div class="body-container">
-            <router-outlet></router-outlet>
+            <div class="body-container">
+                <router-outlet></router-outlet>
+            </div>
+            <div class="footer-container">
+                <app-footer></app-footer>
+            </div>
         </div>
-        <div class="footer-container">
-            <app-footer></app-footer>
-        </div>
+
     </div>
 </div>
