--- a/src/app/Home/navbar/navbar.component.scss
+++ b/src/app/Home/navbar/navbar.component.scss
@@ -3,14 +3,19 @@
 
 @media only screen and (min-width: 600px) {
   .navbar-container{
-    width: 100%;
+    height: 70px;
+
+    
     background-color: #79CDCD;
+
     display: flex;
     justify-content: center;
     &>.container{
-      height: 6.4rem;
+      height: 70px;
+
       width: 1024px;
-      
+
+      margin-right: 10px;
       display: flex;
       align-items: center;
   
@@ -23,12 +28,13 @@
       &>.search{
         width: 65%;
         &>.row-search{
-          height: 2.6rem;
+          height: 30px;
           background-color: #ffff;
           border-radius: 2rem;
   
           display: flex;
           align-items: center;
+          justify-content: space-between;
   
           padding: 0.3rem 0.5rem 0.3rem 1rem;
           &>input{
@@ -88,11 +94,11 @@
   
           &>.quantity{
             position: absolute;
-            top: 28px;
-            left: 55px;
+            top: 17px;
+            left: 58px;
   
-            height: 20px;
-            width: 20px;
+            height: 15px;
+            width: 15px;
   
             display: flex;
             align-items: center;
@@ -103,7 +109,7 @@
             border-radius: 50%;
   
             &>p{
-              font-size: 14px;
+              font-size: 12px;
               color: #EE0000;
               font-weight: 600;
             }
@@ -118,9 +124,18 @@
         display: flex;
         align-items: center;
         justify-content: center;
+
   
         &>.avatar{
-  
+        position: relative;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+          &>.frame{
+            position: absolute;
+          }
         }
         &>.authen{
           display: flex;
@@ -159,6 +174,7 @@
       
       display: flex;
       align-items: center;
+      justify-content: center;
       column-gap: 0.2rem;
   
       &>.logo{
