--- a/src/app/popup/popup-add-product-cart/popup-add-product-cart.component.html
+++ b/src/app/popup/popup-add-product-cart/popup-add-product-cart.component.html
@@ -6,7 +6,7 @@
                     <p>Thêm vào giỏ hàng</p>
                 </div>
                 <div class="close">
-                    <div class="button-close">
+                    <div class="button-close" (click)="onClickClosePopup()">
                         <svg width="25" height="25" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M18 6L6 18M6 6L18 18" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>                            
