--- a/src/app/popup/popup-add-product-cart/popup-add-product-cart.component.scss
+++ b/src/app/popup/popup-add-product-cart/popup-add-product-cart.component.scss
@@ -27,20 +27,24 @@
             width: 37rem;
 
             border-radius: 0.5rem;
+            overflow: hidden;
 
             background-color: $gray-000;
 
-            padding: 1rem;
             &>.header-popup{
-                height: 3rem;
+                height: 4rem;
                 width: 100%;
 
                 display: flex;
                 align-items: center;
 
-                border-bottom: 1px solid $gray-300;
 
+
+                border-bottom: 1px solid $gray-300;
+                background: linear-gradient(to right, $turquoise-600, $orange-600);
                 &>.tiltle{
+                    padding:  0 0 0 1rem;
+
                     width: 90%;
                     height: 100%;
 
@@ -49,6 +53,7 @@
 
                     &>p{
                         @include text-16-bold;
+                        color: $gray-100;
                     }
                 }
                 &>.close{
@@ -83,6 +88,8 @@
                 flex-direction: column;
                 row-gap: 1rem;
 
+                padding: 0 0 0 1rem;
+
                 &>.product-media{
                     height: 20rem;
                     display: flex;
@@ -95,12 +102,13 @@
                         &>img{
                             height: 15rem;
                             width: 20rem;
+                            border-radius: 0.5rem;
                         }
                         &>.product-name{
                             height: 2rem;
                             display: flex;
                             justify-content: center;
-                            align-items: start;
+                            align-items: flex-start;
                             &>p{
                                 @include text-16-regular;
                                 font-size: 1.6rem;
@@ -127,7 +135,8 @@
 
                             height: 2rem;
                             width: 0.5rem;
-                            background-color: $blue-1;
+                            background-color: $turquoise-600;
+
 
 
                             
@@ -181,7 +190,7 @@
 
                             height: 2rem;
                             width: 0.5rem;
-                            background-color: $blue-1;
+                            background-color: $turquoise-600;
 
 
                             
@@ -234,7 +243,8 @@
 
                             height: 2rem;
                             width: 0.5rem;
-                            background-color: $blue-1;
+                            background-color: $turquoise-600;
+
 
 
                             
@@ -302,7 +312,7 @@
                 align-items: center;
                 justify-content: center;
                 &>.button-buy:hover{
-                    background-color: $blue-1;
+                    background-color: $turquoise-600;
                     cursor: pointer;
                 }
                 &>.button-buy{
