--- a/src/app/popup/popup-product-system-information/popup-product-system-information.component.scss
+++ b/src/app/popup/popup-product-system-information/popup-product-system-information.component.scss
@@ -21,34 +21,51 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    overflow-x: hidden;
+
     &>.container{
         &>.main-popup-content{
-            height: 53rem;
-            width: 37rem;
+            height: 80vh;
+            width: 80vw;
 
             border-radius: 0.5rem;
 
             background-color: $gray-000;
 
-            padding: 1rem;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+
             &>.header-popup{
-                height: 3rem;
+                height: 5.5rem;
                 width: 100%;
 
+                border-radius: 0.5rem 0.5rem 0 0 ;
+
                 display: flex;
-                align-items: center;
+                align-items: flex-start;
+
 
                 border-bottom: 1px solid $gray-300;
 
+                background: linear-gradient(to right, $turquoise-600, $orange-600);
+
+                
                 &>.tiltle{
                     width: 90%;
                     height: 100%;
-
+ 
                     display: flex;
                     align-items: center;
+                    padding: 0 0 0 1rem;
+                    
 
                     &>p{
-                        @include text-16-bold;
+                        @include text-18-bold;
+                        font-size: 1.8rem;
+                        color: $gray-100;
                     }
                 }
                 &>.close{
@@ -57,14 +74,15 @@
 
                     display: flex;
                     align-items: center;
+                    justify-content: center;
 
                     &>.button-close:hover{
                         background-color: $gray-300;
                         cursor: pointer;
                     }   
                     &>.button-close{
-                        height: 2.2rem;
-                        width: 2.2rem;
+                        height: 3rem;
+                        width: 3rem;
 
                         display: flex;
                         align-items: center;
@@ -78,8 +96,109 @@
                 }
 
             }
+
             &>.body-popup{
-               
+                height: calc(80vh - 8rem);
+                width: 100%;
+
+                padding: 1rem 0 1rem 0;
+
+                overflow-y: scroll;
+                overflow-x: hidden;
+
+                &::-webkit-scrollbar {
+                    width: 1rem; 
+                }
+            
+                &::-webkit-scrollbar-thumb {
+                background-color: $turquoise-600; 
+                border-radius: 6px; 
+                }
+            
+                &::-webkit-scrollbar-track {
+                background: #f1f1f1; 
+                border-radius: 2px; 
+                }
+
+               &>.row-infor{
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+
+                row-gap: 0.2rem;
+
+                background-color: $gray-200;
+                &>.title{
+                    height: 4rem;
+                    width: 100%;
+                    position: relative;
+
+                    padding-left: 2rem;
+
+                    display: flex;
+                    align-items: center;
+
+                    background-color: $gray-000;
+                    &>p{
+                        @include text-16-bold;
+                        font-size: 1.6rem;
+                        color: $orange-800;
+                    }
+                    &>.box{
+                        height: 2rem;
+                        width: 0.3rem;
+
+                        background-color: $turquoise-600;
+                        position: absolute;
+
+                        top: 25%;
+                        left: 1rem;
+                    }
+                }
+                &>.body-box-infor{
+                    height: auto;
+                    width: 100%;
+
+                    background-color: $gray-200;
+
+                    display: flex;
+                    align-items: center;
+                    flex-direction: column;
+                    row-gap: 0.2rem;
+                    &>.row{
+                        height: 4rem;
+                        width: 100%;
+
+                        display: flex;
+                        align-items: center;
+
+                        padding: 0 0 0 6rem;
+                        background-color: $gray-000;
+
+
+                        &>.title{
+                            width: 30%;
+                            display: flex;
+                            align-items: center;
+                            justify-content: flex-start;
+                            &>p{
+                                @include text-14-regular;
+                                font-size: 1.4rem;
+                            }
+                        }
+                        &>.information-system{
+                            width: 70%;
+                            display: flex;
+                            align-items: center;
+                            justify-content: flex-start;
+                            &>p{
+                                @include text-14-regular;
+                                font-size: 1.4rem;
+                            }
+                        }   
+                    }
+                }
+               }
             }
             
 
