--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 html{
 
-
+    overflow: hidden;
     body{
         margin: 0;
         padding: 0;
@@ -9,6 +9,7 @@ html{
         height: auto;
 
         overflow-x: hidden;
+        overflow-y: hidden;
 
     }
 }
