add some features

--- a/src/app/Dynamic/box-popup-dynamic/box-popup-dynamic.component.html
+++ b/src/app/Dynamic/box-popup-dynamic/box-popup-dynamic.component.html
@@ -2,3 +2,7 @@
 <ng-container #popup_product_system_information></ng-container>
 <ng-container #popup_like></ng-container>
 <ng-container #popup_user_information></ng-container>
+<ng-container #popup_view_all_feedback></ng-container>
+<ng-container #popup_information_product_detail></ng-container>
+<ng-container #popup_confirm_payment></ng-container>
+<ng-container #popup_complete_payment></ng-container>
