--- a/src/app/Home/banner/banner.component.scss
+++ b/src/app/Home/banner/banner.component.scss
@@ -10,7 +10,7 @@
       display: flex;
       column-gap: 0.5rem;
   
-      padding: 1rem 0 1rem 0;
+      padding: 1rem;
   
       & > .big-banner {
         display: flex;
