--- a/src/app/Home/cart/cart.component.html
+++ b/src/app/Home/cart/cart.component.html
@@ -157,21 +157,13 @@
                     </div>
                 </div>
                 <div class="button-payment">
-                    <div class="button-buy">
+                    <div class="button-buy" (click)="showPopupComfirmPayment()">
                         <p>Mua ngay</p>
                     </div>
-                </div>
-                <!-- <div class="row-button">
-                    <div class="button-buy">
-                        <p>Mua ngay</p>
-                    </div>
-                </div> -->
-                
-    
-    
+   
+                 </div>
             </div>
         </div>
     </div>
 </div>
-
 
