--- a/src/app/Home/product-detail/product-detail.component.html
+++ b/src/app/Home/product-detail/product-detail.component.html
@@ -176,7 +176,7 @@
                             <p>Trang bị kiểu hình notch dạng Dynamic Island</p>
                         </div>
                         <div class="button-more">
-                            <div class="button">
+                            <div class="button" (click)="onClickShowPopupInformationProductDetail()">
                                 <p>Xem Thông tin chi tiết</p>
                                 <svg width="17" height="17" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M17 16.0001V7.00006H8V5.00006H19V16.0001H17ZM12 21.0001V12.0001H3V10.0001H14V21.0001H12Z" fill="white"/>
@@ -302,7 +302,7 @@
                                 </div>
                             </div> 
                             <div class="button-more-write-feedback">
-                                <div class="button more">
+                                <div class="button more" (click)="onClickShowPopupViewAllFeedback()">
                                     <p>Xem tất cả đánh giá</p>
                                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M9.5 13C9.78333 13 10.021 12.904 10.213 12.712C10.405 12.52 10.5007 12.2827 10.5 12C10.4993 11.7173 10.4033 11.48 10.212 11.288C10.0207 11.096 9.78333 11 9.5 11C9.21667 11 8.97933 11.096 8.788 11.288C8.59667 11.48 8.50067 11.7173 8.5 12C8.49933 12.2827 8.59533 12.5203 8.788 12.713C8.98067 12.9057 9.218 13.0013 9.5 13ZM13 13C13.2833 13 13.521 12.904 13.713 12.712C13.905 12.52 14.0007 12.2827 14 12C13.9993 11.7173 13.9033 11.48 13.712 11.288C13.5207 11.096 13.2833 11 13 11C12.7167 11 12.4793 11.096 12.288 11.288C12.0967 11.48 12.0007 11.7173 12 12C11.9993 12.2827 12.0953 12.5203 12.288 12.713C12.4807 12.9057 12.718 13.0013 13 13ZM16.5 13C16.7833 13 17.021 12.904 17.213 12.712C17.405 12.52 17.5007 12.2827 17.5 12C17.4993 11.7173 17.4033 11.48 17.212 11.288C17.0207 11.096 16.7833 11 16.5 11C16.2167 11 15.9793 11.096 15.788 11.288C15.5967 11.48 15.5007 11.7173 15.5 12C15.4993 12.2827 15.5953 12.5203 15.788 12.713C15.9807 12.9057 16.218 13.0013 16.5 13ZM9 19C8.66667 19 8.35433 18.925 8.063 18.775C7.77167 18.625 7.534 18.4167 7.35 18.15L3 12L7.35 5.85C7.53333 5.58333 7.771 5.375 8.063 5.225C8.355 5.075 8.66733 5 9 5H19C19.55 5 20.021 5.196 20.413 5.588C20.805 5.98 21.0007 6.45067 21 7V17C21 17.55 20.8043 18.021 20.413 18.413C20.0217 18.805 19.5507 19.0007 19 19H9ZM9 17H19V7H9L5.45 12L9 17Z" fill="#006064"/>
@@ -341,7 +341,7 @@
                                 </div>
                             </div> 
                             <div class="button-more-write-feedback">
-                                <div class="button more">
+                                <div class="button more" (click)="onClickShowPopupViewAllFeedback()">
                                     <p>Xem tất cả đánh giá</p>
                                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M9.5 13C9.78333 13 10.021 12.904 10.213 12.712C10.405 12.52 10.5007 12.2827 10.5 12C10.4993 11.7173 10.4033 11.48 10.212 11.288C10.0207 11.096 9.78333 11 9.5 11C9.21667 11 8.97933 11.096 8.788 11.288C8.59667 11.48 8.50067 11.7173 8.5 12C8.49933 12.2827 8.59533 12.5203 8.788 12.713C8.98067 12.9057 9.218 13.0013 9.5 13ZM13 13C13.2833 13 13.521 12.904 13.713 12.712C13.905 12.52 14.0007 12.2827 14 12C13.9993 11.7173 13.9033 11.48 13.712 11.288C13.5207 11.096 13.2833 11 13 11C12.7167 11 12.4793 11.096 12.288 11.288C12.0967 11.48 12.0007 11.7173 12 12C11.9993 12.2827 12.0953 12.5203 12.288 12.713C12.4807 12.9057 12.718 13.0013 13 13ZM16.5 13C16.7833 13 17.021 12.904 17.213 12.712C17.405 12.52 17.5007 12.2827 17.5 12C17.4993 11.7173 17.4033 11.48 17.212 11.288C17.0207 11.096 16.7833 11 16.5 11C16.2167 11 15.9793 11.096 15.788 11.288C15.5967 11.48 15.5007 11.7173 15.5 12C15.4993 12.2827 15.5953 12.5203 15.788 12.713C15.9807 12.9057 16.218 13.0013 16.5 13ZM9 19C8.66667 19 8.35433 18.925 8.063 18.775C7.77167 18.625 7.534 18.4167 7.35 18.15L3 12L7.35 5.85C7.53333 5.58333 7.771 5.375 8.063 5.225C8.355 5.075 8.66733 5 9 5H19C19.55 5 20.021 5.196 20.413 5.588C20.805 5.98 21.0007 6.45067 21 7V17C21 17.55 20.8043 18.021 20.413 18.413C20.0217 18.805 19.5507 19.0007 19 19H9ZM9 17H19V7H9L5.45 12L9 17Z" fill="#006064"/>
