--- a/src/app/Home/product-detail/product-detail.component.scss
+++ b/src/app/Home/product-detail/product-detail.component.scss
@@ -1,4 +1,4 @@
-@import '../../../SCSS/mixins2';
+@import '../../../SCSS/mimins3';
 @import '../../../SCSS/variables';
 
 .product-detail-container{
