--- a/src/app/popup/popup-add-product-cart/popup-add-product-cart.component.html
+++ b/src/app/popup/popup-add-product-cart/popup-add-product-cart.component.html
@@ -63,7 +63,7 @@
                                     
                                     
                             </div>
-                            <input type="text">
+                            <input type="text" value="1">
                             <div class="box-right">
                                 <svg width="20" height="20" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M19.0481 12.998H13.0481V18.998H11.0481V12.998H5.0481V10.998H11.0481V4.99799H13.0481V10.998H19.0481V12.998Z" fill="black"/>
@@ -76,7 +76,7 @@
                 </div>
             </div>
             <div class="footer-popup">
-                <div class="button-buy">
+                <div class="button-buy" (click)="onClickNavigateCart()">
                     <p>Thêm ngay </p>
                     <svg width="23" height="23" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g clip-path="url(#clip0_56_4)">
