--- a/src/app/Auth/resgister/resgister.component.html
+++ b/src/app/Auth/resgister/resgister.component.html
@@ -1,1 +1,137 @@
-<p>resgister works!</p>
+<div class="register-container">
+    <div class="container">
+        <div class="row-container">
+            <div class="col-image">
+                <img src="../../../assets/register.png" alt="">
+                <p>Your Choice Shop công nghệ là do bạn chọn...!</p>
+            </div>
+            <div class="col-box-register">
+                <div class="box-register">
+                    <div class="row-title">
+                            <p>Mật khẩu</p>
+                    </div>
+                    <div class="row-form-input">
+                        <div class="col-input-email">
+                            <div class="input-email">
+                                <input type="text" placeholder="Vui lòng nhập email">
+                            </div>
+                        </div>
+                        <div class="col-input-password">
+                            <div class="input-password">
+                                <input type="text" placeholder="Vui lòng nhập Password" type="password">
+                                <div class="box-icon-hide" (click)="changeHideShowPassword()">
+                                    <div class="hide-show" *ngIf="passwordHideShow == true">
+                                        <svg width="23" height="23" viewBox="0 0 22 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M10.83 6L14 9.16V9C14 8.20435 13.6839 7.44129 13.1213 6.87868C12.5587 6.31607 11.7956 6 11 6H10.83ZM6.53 6.8L8.08 8.35C8.03 8.56 8 8.77 8 9C8 9.79565 8.31607 10.5587 8.87868 11.1213C9.44129 11.6839 10.2044 12 11 12C11.22 12 11.44 11.97 11.65 11.92L13.2 13.47C12.53 13.8 11.79 14 11 14C9.67392 14 8.40215 13.4732 7.46447 12.5355C6.52678 11.5979 6 10.3261 6 9C6 8.21 6.2 7.47 6.53 6.8ZM1 1.27L3.28 3.55L3.73 4C2.08 5.3 0.78 7 0 9C1.73 13.39 6 16.5 11 16.5C12.55 16.5 14.03 16.2 15.38 15.66L15.81 16.08L18.73 19L20 17.73L2.27 0M11 4C12.3261 4 13.5979 4.52678 14.5355 5.46447C15.4732 6.40215 16 7.67392 16 9C16 9.64 15.87 10.26 15.64 10.82L18.57 13.75C20.07 12.5 21.27 10.86 22 9C20.27 4.61 16 1.5 11 1.5C9.6 1.5 8.26 1.75 7 2.2L9.17 4.35C9.74 4.13 10.35 4 11 4Z" fill="black"/>
+                                            </svg>
+                                            
+                                            
+                                            
+                                    </div>
+                                    <div class="hide-show" *ngIf="passwordHideShow == false">
+                                        <svg width="23" height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M11.4999 8.625C10.7374 8.625 10.0062 8.9279 9.46699 9.46707C8.92782 10.0062 8.62492 10.7375 8.62492 11.5C8.62492 12.2625 8.92782 12.9938 9.46699 13.5329C10.0062 14.0721 10.7374 14.375 11.4999 14.375C12.2624 14.375 12.9937 14.0721 13.5328 13.5329C14.072 12.9938 14.3749 12.2625 14.3749 11.5C14.3749 10.7375 14.072 10.0062 13.5328 9.46707C12.9937 8.9279 12.2624 8.625 11.4999 8.625ZM11.4999 16.2917C10.2291 16.2917 9.01031 15.7868 8.1117 14.8882C7.21309 13.9896 6.70825 12.7708 6.70825 11.5C6.70825 10.2292 7.21309 9.01039 8.1117 8.11178C9.01031 7.21317 10.2291 6.70833 11.4999 6.70833C12.7707 6.70833 13.9895 7.21317 14.8881 8.11178C15.7867 9.01039 16.2916 10.2292 16.2916 11.5C16.2916 12.7708 15.7867 13.9896 14.8881 14.8882C13.9895 15.7868 12.7707 16.2917 11.4999 16.2917ZM11.4999 4.3125C6.70825 4.3125 2.61617 7.29292 0.958252 11.5C2.61617 15.7071 6.70825 18.6875 11.4999 18.6875C16.2916 18.6875 20.3837 15.7071 22.0416 11.5C20.3837 7.29292 16.2916 4.3125 11.4999 4.3125Z" fill="black"/>
+                                            </svg>
+                                            
+                                            
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-input-password">
+                            <div class="input-password">
+                                <input type="text" placeholder="Vui lòng nhập lại Password" type="password">
+                                <div class="box-icon-hide" (click)="changeHideShowPassword()" >
+                                    <div class="hide-show" *ngIf="passwordHideShow == true">
+                                        <svg width="23" height="23" viewBox="0 0 22 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M10.83 6L14 9.16V9C14 8.20435 13.6839 7.44129 13.1213 6.87868C12.5587 6.31607 11.7956 6 11 6H10.83ZM6.53 6.8L8.08 8.35C8.03 8.56 8 8.77 8 9C8 9.79565 8.31607 10.5587 8.87868 11.1213C9.44129 11.6839 10.2044 12 11 12C11.22 12 11.44 11.97 11.65 11.92L13.2 13.47C12.53 13.8 11.79 14 11 14C9.67392 14 8.40215 13.4732 7.46447 12.5355C6.52678 11.5979 6 10.3261 6 9C6 8.21 6.2 7.47 6.53 6.8ZM1 1.27L3.28 3.55L3.73 4C2.08 5.3 0.78 7 0 9C1.73 13.39 6 16.5 11 16.5C12.55 16.5 14.03 16.2 15.38 15.66L15.81 16.08L18.73 19L20 17.73L2.27 0M11 4C12.3261 4 13.5979 4.52678 14.5355 5.46447C15.4732 6.40215 16 7.67392 16 9C16 9.64 15.87 10.26 15.64 10.82L18.57 13.75C20.07 12.5 21.27 10.86 22 9C20.27 4.61 16 1.5 11 1.5C9.6 1.5 8.26 1.75 7 2.2L9.17 4.35C9.74 4.13 10.35 4 11 4Z" fill="black"/>
+                                            </svg>
+                                            
+                                            
+                                            
+                                    </div>
+                                    <div class="hide-show" *ngIf="passwordHideShow == false">
+                                        <svg width="23" height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M11.4999 8.625C10.7374 8.625 10.0062 8.9279 9.46699 9.46707C8.92782 10.0062 8.62492 10.7375 8.62492 11.5C8.62492 12.2625 8.92782 12.9938 9.46699 13.5329C10.0062 14.0721 10.7374 14.375 11.4999 14.375C12.2624 14.375 12.9937 14.0721 13.5328 13.5329C14.072 12.9938 14.3749 12.2625 14.3749 11.5C14.3749 10.7375 14.072 10.0062 13.5328 9.46707C12.9937 8.9279 12.2624 8.625 11.4999 8.625ZM11.4999 16.2917C10.2291 16.2917 9.01031 15.7868 8.1117 14.8882C7.21309 13.9896 6.70825 12.7708 6.70825 11.5C6.70825 10.2292 7.21309 9.01039 8.1117 8.11178C9.01031 7.21317 10.2291 6.70833 11.4999 6.70833C12.7707 6.70833 13.9895 7.21317 14.8881 8.11178C15.7867 9.01039 16.2916 10.2292 16.2916 11.5C16.2916 12.7708 15.7867 13.9896 14.8881 14.8882C13.9895 15.7868 12.7707 16.2917 11.4999 16.2917ZM11.4999 4.3125C6.70825 4.3125 2.61617 7.29292 0.958252 11.5C2.61617 15.7071 6.70825 18.6875 11.4999 18.6875C16.2916 18.6875 20.3837 15.7071 22.0416 11.5C20.3837 7.29292 16.2916 4.3125 11.4999 4.3125Z" fill="black"/>
+                                            </svg>
+                                            
+                                            
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
+                       
+                    </div>
+                    <div class="row-button-register">
+                        <div class="button-register">
+                            <p>Đăng ký</p>
+                        </div>
+                        <div class="row-forget-passwort-register-with-sms">
+                            <div class="col-forget-password">
+    
+                            </div>
+                            <div class="register-with-sms">
+    
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row-other-register">
+                        <div class="row-title">
+                            <div class="row-left">
+    
+                            </div>
+                            <div class="title">
+                                <p>Khác</p>
+                            </div>
+                            <div class="row-right">
+    
+                            </div>
+                        </div>
+                        <div class="row-button-other-register">
+                            <div class="col-button">
+                                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <g clip-path="url(#clip0_206_24)">
+                                        <path d="M16 8C16 3.58175 12.4183 0 8 0C3.58175 0 0 3.58175 0 8C0 11.993 2.9255 15.3027 6.75 15.9028V10.3125H4.71875V8H6.75V6.2375C6.75 4.2325 7.94438 3.125 9.77175 3.125C10.647 3.125 11.5625 3.28125 11.5625 3.28125V5.25H10.5538C9.55994 5.25 9.25 5.86669 9.25 6.49937V8H11.4688L11.1141 10.3125H9.25V15.9028C13.0745 15.3027 16 11.9931 16 8Z" fill="#1877F2"/>
+                                        <path d="M11.1141 10.3125L11.4688 8H9.25V6.49937C9.25 5.86662 9.55994 5.25 10.5538 5.25H11.5625V3.28125C11.5625 3.28125 10.647 3.125 9.77169 3.125C7.94438 3.125 6.75 4.2325 6.75 6.2375V8H4.71875V10.3125H6.75V15.9028C7.16351 15.9676 7.58144 16.0001 8 16C8.41856 16.0001 8.83649 15.9676 9.25 15.9028V10.3125H11.1141Z" fill="white"/>
+                                        </g>
+                                        <defs>
+                                        <clipPath id="clip0_206_24">
+                                        <rect width="16" height="16" fill="white"/>
+                                        </clipPath>
+                                        </defs>
+                                        </svg>
+                                        
+                                <p>Facebook</p>
+                            </div>
+                            <div class="col-button">
+    
+                                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <g clip-path="url(#clip0_206_27)">
+                                        <path d="M5.57386 0.526248C3.97522 1.08083 2.59654 2.13346 1.64035 3.5295C0.684163 4.92554 0.200854 6.59143 0.261418 8.28245C0.321982 9.97348 0.923226 11.6005 1.97684 12.9246C3.03045 14.2486 4.48089 15.1999 6.11511 15.6387C7.44002 15.9806 8.82813 15.9956 10.1601 15.6825C11.3668 15.4115 12.4823 14.8317 13.3976 14C14.3502 13.1079 15.0417 11.9731 15.3976 10.7175C15.7845 9.35208 15.8534 7.91616 15.5989 6.52H8.15886V9.60625H12.4676C12.3815 10.0985 12.197 10.5683 11.9251 10.9875C11.6531 11.4068 11.2994 11.7669 10.8851 12.0462C10.359 12.3943 9.76586 12.6285 9.14387 12.7337C8.52005 12.8497 7.88019 12.8497 7.25636 12.7337C6.6241 12.603 6.02599 12.3421 5.50011 11.9675C4.6553 11.3695 4.02096 10.5199 3.68762 9.54C3.34863 8.54174 3.34863 7.45951 3.68762 6.46125C3.9249 5.76152 4.31716 5.12442 4.83511 4.5975C5.42785 3.98343 6.17828 3.54449 7.00406 3.32884C7.82984 3.11319 8.69906 3.12916 9.51637 3.375C10.1548 3.57099 10.7387 3.91342 11.2214 4.375C11.7072 3.89166 12.1922 3.40708 12.6764 2.92125C12.9264 2.66 13.1989 2.41125 13.4451 2.14375C12.7083 1.45809 11.8435 0.924569 10.9001 0.573748C9.18224 -0.0500151 7.30259 -0.0667781 5.57386 0.526248Z" fill="white"/>
+                                        <path d="M5.57372 0.526245C7.3023 -0.067184 9.18196 -0.0508623 10.9 0.572495C11.8435 0.925699 12.708 1.46179 13.4437 2.14999C13.1937 2.41749 12.93 2.66749 12.675 2.92749C12.19 3.41166 11.7054 3.89416 11.2212 4.37499C10.7385 3.91342 10.1547 3.57098 9.51622 3.37499C8.69919 3.1283 7.82999 3.1114 7.00399 3.32617C6.178 3.54094 5.42711 3.97907 4.83372 4.59249C4.31576 5.11941 3.9235 5.75652 3.68622 6.45624L1.09497 4.44999C2.02248 2.6107 3.62841 1.20377 5.57372 0.526245Z" fill="#E33629"/>
+                                        <path d="M0.407438 6.43751C0.546714 5.74725 0.777942 5.0788 1.09494 4.45001L3.68619 6.46126C3.34721 7.45952 3.34721 8.54175 3.68619 9.54001C2.82285 10.2067 1.9591 10.8767 1.09494 11.55C0.301376 9.97041 0.0593537 8.17064 0.407438 6.43751Z" fill="#F8BD00"/>
+                                        <path d="M8.15876 6.51874H15.5988C15.8533 7.9149 15.7844 9.35082 15.3975 10.7162C15.0416 11.9718 14.3501 13.1067 13.3975 13.9987C12.5613 13.3462 11.7213 12.6987 10.885 12.0462C11.2996 11.7666 11.6535 11.4061 11.9254 10.9864C12.1973 10.5667 12.3817 10.0964 12.4675 9.60374H8.15876C8.15751 8.57624 8.15876 7.54749 8.15876 6.51874Z" fill="#587DBD"/>
+                                        <path d="M1.09375 11.55C1.95792 10.8833 2.82167 10.2133 3.685 9.54001C4.01901 10.5203 4.65426 11.3699 5.5 11.9675C6.02751 12.3403 6.62691 12.5992 7.26 12.7275C7.88382 12.8435 8.52368 12.8435 9.1475 12.7275C9.76949 12.6222 10.3626 12.388 10.8888 12.04C11.725 12.6925 12.565 13.34 13.4012 13.9925C12.4861 14.8247 11.3705 15.4049 10.1637 15.6763C8.83176 15.9894 7.44365 15.9744 6.11875 15.6325C5.07088 15.3527 4.09209 14.8595 3.24375 14.1838C2.34583 13.4709 1.61244 12.5725 1.09375 11.55Z" fill="#319F43"/>
+                                        </g>
+                                        <defs>
+                                        <clipPath id="clip0_206_27">
+                                        <rect width="16" height="16" fill="white"/>
+                                        </clipPath>
+                                        </defs>
+                                        </svg>
+                                        
+                                <p>Google</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row-register">
+                       <p> Bạn đã có tài khoản? <span (click)="navigateLogin()">Đăng nhập</span></p>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </div>
+</div>
