--- a/src/app/Home/brand/brand.component.scss
+++ b/src/app/Home/brand/brand.component.scss
@@ -1,3 +1,5 @@
+@import '../../../SCSS/mimins3';
+@import '../../../SCSS/variables';
 
 @media only screen and (min-width: 1000px) {
     .brand-container{
@@ -8,6 +10,7 @@
         padding: 1rem 0 1rem 0;
         &>.container{
             width: 1024px;
+            padding: 0 1rem;
     
            
             &>.list-brand{
@@ -19,6 +22,9 @@
                     flex: 1;
                     background-color: #fff;
                     border: 1px solid #E8E8E8;
+
+
+                    
                 }
                 &>.card-brand:hover{
                     border: 1px solid #B5B5B5;
@@ -56,9 +62,23 @@
                     flex: 1;
                     background-color: #fff;
                     border: 1px solid #E8E8E8;
+                    position: relative;
                     &>svg{
                         width: 100%;
                         height: 100%;
+                    }
+                    &>.box-filter-brand{
+                        position: absolute;
+                        left: 0;
+                        top: 0;
+                        &>.row-filter-brand{
+                            &>.col-filter-brand{
+                                &>svg{
+                                    height: 20px;
+                                    width: 150px;
+                                }
+                            }
+                        }
                     }
                 }
                 &>.card-brand:hover{
