--- a/src/app/Home/home-page/home-page.component.scss
+++ b/src/app/Home/home-page/home-page.component.scss
@@ -1,3 +1,5 @@
+@import '../../../SCSS/mimins3';
+@import '../../../SCSS/variables';
 .home-page-container{
     width: 100%;
     height: 100vh;
@@ -9,14 +11,22 @@
         height: 100vh;
         display: flex;
         align-items: center;
+        justify-content: center;
         flex-direction: column;
         &>.navbar-container{
             width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            background-color: $turquoise-600;
+
+
 
         }
         &>.body-container{
             width: 100%;
-            height: calc(100vh - (6.5rem));
+            height: calc(100vh - (70px));
 
             overflow-y: scroll;
             overflow-x: hidden;
