--- a/src/app/Home/navbar/navbar.component.html
+++ b/src/app/Home/navbar/navbar.component.html
@@ -17,7 +17,7 @@
         </div>
       </div>
       <div class="cart">
-        <div class="box-cart">
+        <div class="box-cart" (click)="onClickNavigateCart()">
           <div class="quantity">
             <p>1</p>
           </div>
@@ -28,17 +28,7 @@
         </div>
       </div>
       <div class="authentication">
-        <div class="avatar" *ngIf="true">
-          <svg class="frame" width="40" height="40" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M10 18.75C7.67936 18.75 5.45376 17.8281 3.81282 16.1872C2.17187 14.5462 1.25 12.3206 1.25 10C1.25 7.67936 2.17187 5.45376 3.81282 3.81282C5.45376 2.17187 7.67936 1.25 10 1.25C12.3206 1.25 14.5462 2.17187 16.1872 3.81282C17.8281 5.45376 18.75 7.67936 18.75 10C18.75 12.3206 17.8281 14.5462 16.1872 16.1872C14.5462 17.8281 12.3206 18.75 10 18.75ZM10 20C12.6522 20 15.1957 18.9464 17.0711 17.0711C18.9464 15.1957 20 12.6522 20 10C20 7.34784 18.9464 4.8043 17.0711 2.92893C15.1957 1.05357 12.6522 0 10 0C7.34784 0 4.8043 1.05357 2.92893 2.92893C1.05357 4.8043 0 7.34784 0 10C0 12.6522 1.05357 15.1957 2.92893 17.0711C4.8043 18.9464 7.34784 20 10 20Z" fill="url(#paint0_linear_64_6)"/>
-            <defs>
-            <linearGradient id="paint0_linear_64_6" x1="10" y1="0" x2="10" y2="20" gradientUnits="userSpaceOnUse">
-            <stop stop-color="#00ACC1"/>
-            <stop offset="0.57" stop-color="#FFB052"/>
-            </linearGradient>
-            </defs>
-            </svg>
-            
+        <div class="avatar" *ngIf="true" (click)="onClickNavigateInformation()">      
           <svg class="avatar-defaul" width="37" height="37" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <rect width="42" height="42" rx="21" fill="url(#pattern0_26_3)"/>
             <defs>
