--- a/src/app/Home/navbar/navbar.component.scss
+++ b/src/app/Home/navbar/navbar.component.scss
@@ -1,12 +1,12 @@
-@import '../../../SCSS/mixins2';
+@import '../../../SCSS/mimins3';
 @import '../../../SCSS/variables';
 
-@media only screen and (min-width: 600px) {
+@media only screen and (max-width: 576px) {
   .navbar-container{
     height: 70px;
 
     
-    background-color: #79CDCD;
+    background-color: $turquoise-600;
 
     display: flex;
     justify-content: center;
@@ -21,7 +21,8 @@
   
       &>.logo{
         display: flex;
-        justify-content: flex-start;
+        justify-content: center;
+        align-items: center;
         width: 10%;
         cursor: pointer;
       }
@@ -44,7 +45,7 @@
             width: 93%;
             height: 2rem;
             
-            @include text-14-regular;
+            @include text-16-regular;
             color: $gray-500;
           }
           &>svg{
@@ -66,15 +67,17 @@
         }
       }
       &>.cart{
-        width: 10%;
+        width: 12.5%;
         height: 100%;
+
+        @include flex-al-ju;
         &>.box-cart{
           display: flex;
           justify-content: center;
           align-items: center;
           position: relative;
-          height: 100%;
-          width: 100%;
+          height: 2rem;
+          width: 2rem;
           
           &>svg{
             &>path{
@@ -94,8 +97,8 @@
   
           &>.quantity{
             position: absolute;
-            top: 17px;
-            left: 58px;
+            top: 0%;
+            left: 60%;
   
             height: 15px;
             width: 15px;
@@ -119,8 +122,8 @@
   
       }
       &>.authentication{
-        width: 15%;
-  
+        width: 12.5%;
+        height: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -132,6 +135,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
+
+        cursor: pointer;
 
           &>.frame{
             position: absolute;
@@ -160,47 +165,41 @@
   }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
   .navbar-container{
-    width: 100%;
-    background-color: #79CDCD;
+    height: 70px;
+
+    
+    background-color: $turquoise-600;
+
     display: flex;
     justify-content: center;
-
-
     &>.container{
-      height: 6.4rem;
-      width: 100%;
-      
+      height: 70px;
+
+      width: 1024px;
+
+      margin-right: 10px;
       display: flex;
       align-items: center;
-      justify-content: center;
-      column-gap: 0.2rem;
   
       &>.logo{
         display: flex;
         justify-content: center;
-        width: 15%;
+        align-items: center;
+        width: 10%;
         cursor: pointer;
-
-        &>svg{
-          height: 3rem;
-          width: 3rem;
-        }
-
       }
       &>.search{
-        width: 55%;
-        height: 3rem;
-        display: flex;
-        align-items: center;
+        width: 65%;
         &>.row-search{
-          height: 2rem;
+          height: 30px;
           background-color: #ffff;
           border-radius: 2rem;
   
           display: flex;
           align-items: center;
+          justify-content: space-between;
   
           padding: 0.3rem 0.5rem 0.3rem 1rem;
           &>input{
@@ -209,14 +208,13 @@
   
             width: 93%;
             height: 2rem;
-  
+            
             @include text-16-regular;
-
-            color: #696969;
+            color: $gray-500;
           }
           &>svg{
             &>path{
-              fill: #79CDCD;
+              fill: $blue-1;
   
             }
   
@@ -233,15 +231,17 @@
         }
       }
       &>.cart{
-        width: 10%;
+        width: 12.5%;
         height: 100%;
+
+        @include flex-al-ju;
         &>.box-cart{
           display: flex;
           justify-content: center;
           align-items: center;
           position: relative;
-          height: 100%;
-          width: 100%;
+          height: 2rem;
+          width: 2rem;
           
           &>svg{
             &>path{
@@ -261,11 +261,11 @@
   
           &>.quantity{
             position: absolute;
-            top: 25%;
+            top: 0%;
             left: 60%;
   
-            height: 20px;
-            width: 20px;
+            height: 15px;
+            width: 15px;
   
             display: flex;
             align-items: center;
@@ -276,8 +276,7 @@
             border-radius: 50%;
   
             &>p{
-              @include text-14-bold;
-
+              font-size: 12px;
               color: #EE0000;
               font-weight: 600;
             }
@@ -287,26 +286,32 @@
   
       }
       &>.authentication{
-        width: 20%;
+        width: 12.5%;
         height: 100%;
-  
         display: flex;
         align-items: center;
         justify-content: center;
+
   
         &>.avatar{
-          
-        &>svg{
-          height: 2rem;
-          width: 2rem;
+        position: relative;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        cursor: pointer;
+
+          &>.frame{
+            position: absolute;
+          }
         }
-        } 
         &>.authen{
           display: flex;
           column-gap: 0.2rem;
   
           &>p{
-            @include text-14-regular;
+            @include text-14-bold;
 
             font-weight: 550;
   
@@ -315,8 +320,6 @@
           &>p:hover{
             color: $orange-600;
             cursor: pointer;
-            @include text-14-regular;
-
           }
         }
   
@@ -325,3 +328,336 @@
     }
   }
 }
+
+@media only screen and (max-width: 1024px) {
+  .navbar-container{
+    height: 70px;
+    width: 100%;
+    
+    background-color: $turquoise-600;
+
+    display: flex;
+    justify-content: center;
+    &>.container{
+      height: 70px;
+
+      width: 1024px;
+
+      margin-right: 10px;
+      display: flex;
+      align-items: center;
+  
+      &>.logo{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 10%;
+        cursor: pointer;
+      }
+      &>.search{
+        width: 65%;
+        &>.row-search{
+          height: 30px;
+          background-color: #ffff;
+          border-radius: 2rem;
+  
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+  
+          padding: 0.3rem 0.5rem 0.3rem 1rem;
+          &>input{
+            outline: none;
+            border: none;
+  
+            width: 93%;
+            height: 2rem;
+            
+            @include text-16-regular;
+            color: $gray-500;
+          }
+          &>svg{
+            &>path{
+              fill: $blue-1;
+  
+            }
+  
+          }
+          &>svg:hover{
+            cursor: pointer;
+            &>path{
+              fill: $orange-600;
+  
+            }
+  
+          }
+  
+        }
+      }
+      &>.cart{
+        width: 12.5%;
+        height: 100%;
+
+        @include flex-al-ju;
+        &>.box-cart{
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          position: relative;
+          height: 2rem;
+          width: 2rem;
+          
+          &>svg{
+            &>path{
+              fill: #ffff;
+  
+            }
+  
+          }
+          &>svg:hover{
+            cursor: pointer;
+            &>path{
+              fill: $orange-600;
+  
+            }
+  
+          }
+  
+          &>.quantity{
+            position: absolute;
+            top: 0%;
+            left: 60%;
+  
+            height: 15px;
+            width: 15px;
+  
+            display: flex;
+            align-items: center;
+            justify-content: center;
+  
+            background-color: #fff;
+  
+            border-radius: 50%;
+  
+            &>p{
+              font-size: 12px;
+              color: #EE0000;
+              font-weight: 600;
+            }
+          }
+        }
+  
+  
+      }
+      &>.authentication{
+        width: 12.5%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+  
+        &>.avatar{
+        position: relative;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        cursor: pointer;
+
+          &>.frame{
+            position: absolute;
+          }
+        }
+        &>.authen{
+          display: flex;
+          column-gap: 0.2rem;
+  
+          &>p{
+            @include text-14-bold;
+
+            font-weight: 550;
+  
+            color: #ffff;
+          }
+          &>p:hover{
+            color: $orange-600;
+            cursor: pointer;
+          }
+        }
+  
+  
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: 1025px) {
+  .navbar-container{
+    height: 70px;
+    width: 1024px;
+    
+    background-color: $turquoise-600;
+
+    display: flex;
+    justify-content: center;
+    &>.container{
+      height: 70px;
+
+      width: 100%;
+
+      margin-right: 10px;
+      display: flex;
+      align-items: center;
+  
+      &>.logo{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 10%;
+        cursor: pointer;
+      }
+      &>.search{
+        width: 65%;
+        &>.row-search{
+          height: 30px;
+          background-color: #ffff;
+          border-radius: 2rem;
+  
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+  
+          padding: 0.3rem 0.5rem 0.3rem 1rem;
+          &>input{
+            outline: none;
+            border: none;
+  
+            width: 93%;
+            height: 2rem;
+            
+            @include text-16-regular;
+            color: $gray-500;
+          }
+          &>svg{
+            &>path{
+              fill: $blue-1;
+  
+            }
+  
+          }
+          &>svg:hover{
+            cursor: pointer;
+            &>path{
+              fill: $orange-600;
+  
+            }
+  
+          }
+  
+        }
+      }
+      &>.cart{
+        width: 12.5%;
+        height: 100%;
+
+        @include flex-al-ju;
+        &>.box-cart{
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          position: relative;
+          height: 2rem;
+          width: 2rem;
+          
+          &>svg{
+            &>path{
+              fill: #ffff;
+  
+            }
+  
+          }
+          &>svg:hover{
+            cursor: pointer;
+            &>path{
+              fill: $orange-600;
+  
+            }
+  
+          }
+  
+          &>.quantity{
+            position: absolute;
+            top: 0%;
+            left: 60%;
+  
+            height: 15px;
+            width: 15px;
+  
+            display: flex;
+            align-items: center;
+            justify-content: center;
+  
+            background-color: #fff;
+  
+            border-radius: 50%;
+  
+            &>p{
+              font-size: 12px;
+              color: #EE0000;
+              font-weight: 600;
+            }
+          }
+        }
+  
+  
+      }
+      &>.authentication{
+        width: 12.5%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+  
+        &>.avatar{
+        position: relative;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        cursor: pointer;
+
+          &>.frame{
+            position: absolute;
+          }
+        }
+        &>.authen{
+          display: flex;
+          column-gap: 0.2rem;
+  
+          &>p{
+            @include text-14-bold;
+
+            font-weight: 550;
+  
+            color: #ffff;
+          }
+          &>p:hover{
+            color: $orange-600;
+            cursor: pointer;
+          }
+        }
+  
+  
+      }
+    }
+  }
+}
+
+
+
+
+
