--- a/src/app/comments/comment/comment.component.html
+++ b/src/app/comments/comment/comment.component.html
@@ -17,6 +17,11 @@
                         </svg>                  
                 </p>      
             </div>
+            <p>-</p>
+            <svg width="17" height="17" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22C17.5 22 22 17.5 22 12C22 6.5 17.5 2 12 2ZM10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z" fill="#00ACC1"/>
+                </svg>
+                
         </div>
         <div class="customer-review-content">
             <p>Máy mình mua hôm 24/5 mới dùng 1th thôi mà s mỗi lần sạc pin điện thoại nóng quá. Mặc dù sạc trong phòng máy lạnh nhưng điện thoại vẫn nóng. Sợ dùng vài tháng chắc pin tuột hư pin luôn quá. K bít là do IOS như z hết hay là do đt mình tại trước h mình dùng android k thấy tình trạng như vậy</p>
