--- a/src/app/popup/popup-view-all-feedback/popup-view-all-feedback.component.html
+++ b/src/app/popup/popup-view-all-feedback/popup-view-all-feedback.component.html
@@ -1,1 +1,158 @@
-<p>popup-view-all-feedback works!</p>
+<div class="container-popup">
+    <div class="container">
+        <div class="main-popup-content">
+            <div class="header-popup">
+                <div class="tiltle">
+                    <p>Tất cả Đánh giá</p>
+                </div>
+                <div class="close">
+                    <div class="button-close" (click)="onClickClosePopup()">
+                        <svg width="25" height="25" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M18 6L6 18M6 6L18 18" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>                            
+                    </div>
+                </div>
+            </div>
+            <div class="body-popup">
+               <div class="title">
+                    <p>Đánh giá Điện thoại iPhone 15 Pro Max</p>
+               </div>
+               <div class="box-star-feedback">
+                <div class="box-star">
+                    <div class="total-point">
+                        <p>5</p>
+                        <svg width="17" height="17" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_35_8)">
+                            <path d="M9.15193 4.48634L7.39412 6.00314L7.92966 8.2715C7.95921 8.39464 7.9516 8.52377 7.9078 8.64259C7.86399 8.7614 7.78596 8.86457 7.68355 8.93906C7.58114 9.01355 7.45895 9.05601 7.33241 9.06109C7.20588 9.06617 7.08068 9.03363 6.97263 8.96759L4.99998 7.75353L3.02615 8.96759C2.91811 9.03325 2.79306 9.06548 2.66675 9.06021C2.54043 9.05495 2.4185 9.01243 2.3163 8.938C2.21411 8.86358 2.13622 8.76058 2.09244 8.64198C2.04866 8.52337 2.04095 8.39447 2.07029 8.2715L2.60779 6.00314L0.849976 4.48634C0.754389 4.40373 0.685259 4.29478 0.651219 4.17312C0.617179 4.05145 0.619737 3.92245 0.658575 3.80223C0.697413 3.682 0.770809 3.57589 0.869596 3.49713C0.968384 3.41837 1.08818 3.37046 1.21404 3.35939L3.51873 3.17345L4.40779 1.02189C4.45591 0.904629 4.53782 0.804329 4.64309 0.733739C4.74836 0.663149 4.87225 0.625458 4.999 0.625458C5.12575 0.625458 5.24964 0.663149 5.35491 0.733739C5.46018 0.804329 5.54209 0.904629 5.59021 1.02189L6.47888 3.17345L8.78357 3.35939C8.90967 3.37005 9.02982 3.41769 9.12897 3.49634C9.22812 3.57499 9.30185 3.68115 9.34093 3.80152C9.38001 3.92189 9.3827 4.05111 9.34866 4.173C9.31462 4.29489 9.24537 4.40403 9.14959 4.48673L9.15193 4.48634Z" fill="#FF8B00"/>
+                            </g>
+                            <defs>
+                            <clipPath id="clip0_35_8">
+                            <rect width="10" height="10" fill="white"/>
+                            </clipPath>
+                            </defs>
+                            </svg>
+                    </div>
+                        <div class="box-star-point">
+                            <div class="row-star-point" *ngFor="let item of [].constructor(5)">
+                                <div class="point">
+                                    <p>5</p>
+                                    <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <g clip-path="url(#clip0_35_8)">
+                                        <path d="M9.15193 4.48634L7.39412 6.00314L7.92966 8.2715C7.95921 8.39464 7.9516 8.52377 7.9078 8.64259C7.86399 8.7614 7.78596 8.86457 7.68355 8.93906C7.58114 9.01355 7.45895 9.05601 7.33241 9.06109C7.20588 9.06617 7.08068 9.03363 6.97263 8.96759L4.99998 7.75353L3.02615 8.96759C2.91811 9.03325 2.79306 9.06548 2.66675 9.06021C2.54043 9.05495 2.4185 9.01243 2.3163 8.938C2.21411 8.86358 2.13622 8.76058 2.09244 8.64198C2.04866 8.52337 2.04095 8.39447 2.07029 8.2715L2.60779 6.00314L0.849976 4.48634C0.754389 4.40373 0.685259 4.29478 0.651219 4.17312C0.617179 4.05145 0.619737 3.92245 0.658575 3.80223C0.697413 3.682 0.770809 3.57589 0.869596 3.49713C0.968384 3.41837 1.08818 3.37046 1.21404 3.35939L3.51873 3.17345L4.40779 1.02189C4.45591 0.904629 4.53782 0.804329 4.64309 0.733739C4.74836 0.663149 4.87225 0.625458 4.999 0.625458C5.12575 0.625458 5.24964 0.663149 5.35491 0.733739C5.46018 0.804329 5.54209 0.904629 5.59021 1.02189L6.47888 3.17345L8.78357 3.35939C8.90967 3.37005 9.02982 3.41769 9.12897 3.49634C9.22812 3.57499 9.30185 3.68115 9.34093 3.80152C9.38001 3.92189 9.3827 4.05111 9.34866 4.173C9.31462 4.29489 9.24537 4.40403 9.14959 4.48673L9.15193 4.48634Z" fill="#FF8B00"/>
+                                        </g>
+                                        <defs>
+                                        <clipPath id="clip0_35_8">
+                                        <rect width="10" height="10" fill="white"/>
+                                        </clipPath>
+                                        </defs>
+                                        </svg>
+                                        
+                                </div>
+                                <div class="point-bar">
+                                   <div class="bar">
+                                    <div class="timing">
+
+                                    </div>
+                                   </div>
+
+                                </div>
+                                <div class="quantity-point">
+                                    <p>20</p>
+                                </div>
+                            </div>
+                        </div>
+                </div>
+
+
+                    
+               </div>
+               <div class="box-media">
+                    <div class="media" *ngFor="let item of [].constructor(5)">
+                        <img src="../../../assets/iphone15.png" alt="">
+                    </div>
+               </div>
+               <div class="box-filter">
+                <div class="type-feedback">
+                    <p>Lọc đánh giá</p>
+                    <div class="type-feedback">
+                        <div><div class="row-type">
+                            <p>Tất cả</p>
+                        </div>
+                        <div class="row-type" *ngFor="let item of [].constructor(5)">
+                            <p>5</p>
+                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <g clip-path="url(#clip0_35_8)">
+                                <path d="M9.15193 4.48634L7.39412 6.00314L7.92966 8.2715C7.95921 8.39464 7.9516 8.52377 7.9078 8.64259C7.86399 8.7614 7.78596 8.86457 7.68355 8.93906C7.58114 9.01355 7.45895 9.05601 7.33241 9.06109C7.20588 9.06617 7.08068 9.03363 6.97263 8.96759L4.99998 7.75353L3.02615 8.96759C2.91811 9.03325 2.79306 9.06548 2.66675 9.06021C2.54043 9.05495 2.4185 9.01243 2.3163 8.938C2.21411 8.86358 2.13622 8.76058 2.09244 8.64198C2.04866 8.52337 2.04095 8.39447 2.07029 8.2715L2.60779 6.00314L0.849976 4.48634C0.754389 4.40373 0.685259 4.29478 0.651219 4.17312C0.617179 4.05145 0.619737 3.92245 0.658575 3.80223C0.697413 3.682 0.770809 3.57589 0.869596 3.49713C0.968384 3.41837 1.08818 3.37046 1.21404 3.35939L3.51873 3.17345L4.40779 1.02189C4.45591 0.904629 4.53782 0.804329 4.64309 0.733739C4.74836 0.663149 4.87225 0.625458 4.999 0.625458C5.12575 0.625458 5.24964 0.663149 5.35491 0.733739C5.46018 0.804329 5.54209 0.904629 5.59021 1.02189L6.47888 3.17345L8.78357 3.35939C8.90967 3.37005 9.02982 3.41769 9.12897 3.49634C9.22812 3.57499 9.30185 3.68115 9.34093 3.80152C9.38001 3.92189 9.3827 4.05111 9.34866 4.173C9.31462 4.29489 9.24537 4.40403 9.14959 4.48673L9.15193 4.48634Z" fill="#FF8B00"/>
+                                </g>
+                                <defs>
+                                <clipPath id="clip0_35_8">
+                                <rect width="10" height="10" fill="white"/>
+                                </clipPath>
+                                </defs>
+                                </svg>   
+                        </div></div>
+                        <div class="arrange">
+                            <div class="button-arrange">
+                                <p>Sắp xếp:</p>
+                                <p>Mới nhất</p>
+                                <svg width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M7.7071 7.70697C7.51957 7.89444 7.26526 7.99976 7.0001 7.99976C6.73493 7.99976 6.48063 7.89444 6.2931 7.70697L0.636099 2.04997C0.540589 1.95772 0.464406 1.84738 0.411997 1.72537C0.359588 1.60337 0.332002 1.47215 0.330848 1.33937C0.329694 1.20659 0.354996 1.07491 0.405277 0.952016C0.455558 0.82912 0.529811 0.717467 0.623704 0.623574C0.717597 0.529682 0.829248 0.455429 0.952145 0.405148C1.07504 0.354867 1.20672 0.329565 1.3395 0.330719C1.47228 0.331873 1.6035 0.359459 1.7255 0.411868C1.84751 0.464277 1.95785 0.540459 2.0501 0.635969L7.0001 5.58597L11.9501 0.635969C12.1387 0.453811 12.3913 0.353017 12.6535 0.355295C12.9157 0.357574 13.1665 0.462742 13.3519 0.64815C13.5373 0.833559 13.6425 1.08437 13.6448 1.34657C13.6471 1.60876 13.5463 1.86137 13.3641 2.04997L7.7071 7.70697Z" fill="black"/>
+                                    </svg>
+                                    
+                                    
+                            </div>
+                        </div>
+                        
+                    </div>
+                    
+                </div>
+               </div>
+               <div class="user-feedback">
+                <div class="row-user-feedback" *ngFor="let item of [].constructor(5)">
+                    <div class="user-name">
+                        <p>Hải</p>
+                    </div>
+                    <div class="feedback-star">
+                        <svg *ngFor="let item of [].constructor(5)" width="15" height="15" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_35_8)">
+                            <path d="M9.15193 4.48634L7.39412 6.00314L7.92966 8.2715C7.95921 8.39464 7.9516 8.52377 7.9078 8.64259C7.86399 8.7614 7.78596 8.86457 7.68355 8.93906C7.58114 9.01355 7.45895 9.05601 7.33241 9.06109C7.20588 9.06617 7.08068 9.03363 6.97263 8.96759L4.99998 7.75353L3.02615 8.96759C2.91811 9.03325 2.79306 9.06548 2.66675 9.06021C2.54043 9.05495 2.4185 9.01243 2.3163 8.938C2.21411 8.86358 2.13622 8.76058 2.09244 8.64198C2.04866 8.52337 2.04095 8.39447 2.07029 8.2715L2.60779 6.00314L0.849976 4.48634C0.754389 4.40373 0.685259 4.29478 0.651219 4.17312C0.617179 4.05145 0.619737 3.92245 0.658575 3.80223C0.697413 3.682 0.770809 3.57589 0.869596 3.49713C0.968384 3.41837 1.08818 3.37046 1.21404 3.35939L3.51873 3.17345L4.40779 1.02189C4.45591 0.904629 4.53782 0.804329 4.64309 0.733739C4.74836 0.663149 4.87225 0.625458 4.999 0.625458C5.12575 0.625458 5.24964 0.663149 5.35491 0.733739C5.46018 0.804329 5.54209 0.904629 5.59021 1.02189L6.47888 3.17345L8.78357 3.35939C8.90967 3.37005 9.02982 3.41769 9.12897 3.49634C9.22812 3.57499 9.30185 3.68115 9.34093 3.80152C9.38001 3.92189 9.3827 4.05111 9.34866 4.173C9.31462 4.29489 9.24537 4.40403 9.14959 4.48673L9.15193 4.48634Z" fill="#FF8B00"/>
+                            </g>
+                            <defs>
+                            <clipPath id="clip0_35_8">
+                            <rect width="10" height="10" fill="white"/>
+                            </clipPath>
+                            </defs>
+                            </svg>
+                    </div>
+                    <div class="row-content-feedback">
+                        <p>Sản phẩm tốt thái độ nhân viên thì tạm</p>
+                    </div>
+                    <div class="row-reply-feedback">
+                        <p>Cảm on đã mua hàng</p>
+                    </div>
+                    <div class="row-reaction">
+                        <div class="like">
+                            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M13 8L11.767 7.794C11.7371 7.97311 11.7465 8.15659 11.7947 8.33167C11.8429 8.50675 11.9286 8.66923 12.046 8.80781C12.1634 8.94639 12.3095 9.05773 12.4742 9.1341C12.639 9.21046 12.8184 9.25001 13 9.25V8ZM2 8V6.75C1.31 6.75 0.75 7.31 0.75 8H2ZM4 19.25H15.36V16.75H4V19.25ZM16.56 6.75H13V9.25H16.56V6.75ZM14.233 8.206L15.039 3.37L12.573 2.959L11.767 7.795L14.233 8.206ZM12.82 0.75H12.606V3.25H12.82V0.75ZM9.07 2.643L6.554 6.416L8.634 7.803L11.15 4.029L9.07 2.643ZM5.93 6.75H2V9.25H5.93V6.75ZM0.75 8V16H3.25V8H0.75ZM18.547 16.637L19.747 10.637L17.296 10.147L16.096 16.147L18.547 16.637ZM6.554 6.416C6.48552 6.51873 6.39273 6.60297 6.28388 6.66124C6.17502 6.7195 6.05347 6.74999 5.93 6.75V9.25C6.46499 9.25 6.99171 9.11792 7.46341 8.8655C7.93511 8.61308 8.3372 8.24812 8.634 7.803L6.554 6.416ZM15.039 3.37C15.0927 3.04761 15.0756 2.71739 14.9888 2.4023C14.902 2.08721 14.7475 1.79481 14.5363 1.54546C14.325 1.2961 14.0619 1.09577 13.7653 0.958394C13.4688 0.821022 13.1468 0.749908 12.82 0.75V3.25C12.7838 3.24991 12.747 3.24194 12.7141 3.22664C12.6812 3.21134 12.6521 3.18908 12.6287 3.1614C12.6053 3.13372 12.5882 3.10128 12.5786 3.06633C12.569 3.03138 12.5671 2.99476 12.573 2.959L15.039 3.37ZM16.56 9.25C16.671 9.24992 16.7806 9.27448 16.881 9.32191C16.9814 9.36934 17.0699 9.43845 17.1404 9.52426C17.2108 9.61008 17.2612 9.71045 17.2882 9.81814C17.3151 9.92583 17.3178 10.0382 17.296 10.147L19.747 10.637C19.8412 10.1656 19.8297 9.67915 19.7132 9.21274C19.5968 8.74633 19.3783 8.31156 19.0736 7.93976C18.7688 7.56796 18.3854 7.2684 17.9509 7.06267C17.5164 6.85693 17.0417 6.75014 16.561 6.75L16.56 9.25ZM15.36 19.25C16.1114 19.25 16.8396 18.9897 17.4206 18.5133C18.0017 18.0368 18.3997 17.3738 18.547 16.637L16.096 16.147C16.062 16.3171 15.9701 16.4702 15.8359 16.5802C15.7017 16.6901 15.5335 16.7501 15.36 16.75V19.25ZM12.606 0.75C11.9063 0.750087 11.2175 0.922916 10.6006 1.25314C9.98381 1.58337 9.45803 2.06078 9.07 2.643L11.15 4.029C11.3098 3.78935 11.5264 3.59286 11.7803 3.45697C12.0343 3.32108 12.3179 3.24998 12.606 3.25V0.75ZM4 16.75C3.80109 16.75 3.61032 16.671 3.46967 16.5303C3.32902 16.3897 3.25 16.1989 3.25 16H0.75C0.75 16.862 1.09241 17.6886 1.7019 18.2981C2.3114 18.9076 3.13805 19.25 4 19.25V16.75Z" fill="black"/>
+                                <path d="M6 8V18" stroke="black" stroke-width="2.5"/>
+                                </svg>
+                                <p>Thích</p>
+                                
+                        </div>
+                        <div class="time">
+                            <p>10/10/2003</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="more-1">
+                    <div class="button-more">
+                        <p>Xem thêm</p>
+                    </div>
+                </div>
+
+               </div>
+            </div>
+
+        </div>
+    </div>
+</div>
